changes in font size

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               <div class="icons"><i class="fa-solid fa-clock" style="color: #F7E904;"></i></div>
               <div class="timingpara">
                 <p style="margin: 2px;">mon - sun</p>
-                <p style="margin: 2px;">10 am - 10 pm</p>
+                <p style="margin: 2px 1px 2px 2px; font-size: 14px;">10 am - 10 pm</p>
               </div>
   
             </div>
