changes in page direction

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="#location">Location</a>
                 </li>
                 <li>
-                    <a href="#location">Franchise enquiery</a>
+                    <a href="/franchise.html">Franchise enquiery</a>
                 </li>
             </ul>
         </div>
